added another price test